syntax = "proto3";

//cookie
package twitter_service.v1;

option go_package = "pb/v1";

import "google/api/annotations.proto";

service TwitterService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {
    option (google.api.http) = {
      post: "/create/post"
      body: "*"
    };
  }
  rpc GetFeed(GetFeedRequest) returns (GetFeedResponse) {
    option (google.api.http) = {
      post: "/get/feed"
      body: "*"
    };
  }
}

service TwitterServiceFeed {
  rpc GetFeed(GetFeedRequest) returns (GetFeedResponse) {
    option (google.api.http) = {
      post: "/get/feed"
      body: "*"
    };
  }
}


message Post {
  string id = 1;
  string payload = 2;
  int64 created_at = 3;
  int32 created_by = 4;
}

message CreatePostRequest {
  Post post  = 1;
}

message CreatePostResponse {
  Post post  = 1;
}

message GetFeedRequest {
  int32 user_id = 1;
}

message GetFeedResponse {
  repeated Post post  = 1;
}